schema/testdata/validation_relationships_one_to_many_unmatched_many_side/schema.keel
model Author {
    fields {
        post Post
    }
}

model Post {
    fields {
        author Author[]
        coAuthor Author[]
    }
}
