schema/testdata/errors/relationships_optional_on_many.keel
model Author {
    fields {
        //expect-error:9:14:RelationshipError:Cannot define a repeated model field as optional
        posts Post[]?
    }
}

model Post {
    fields {
        author Author
    }
}
